footer and padding css styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,4 +35,50 @@ header h1 {
 
 header a {
     text-decoration: none;
+    color: var(--primary-color);
+}
+
+header nav {
+    margin: 7px 0;
+}
+
+header nav ul li {
+    padding: 10px 15px;
+    font-weight: 1.55vw;
+    text-shadow: 0 0 10px rgba(0,0,0,0.5)
+}
+
+header nav ul li a:hover {
+    background: var(--primary-color);
+    color: var(--secondary-color);
+    border-radius: 15px;
+    text-shadow: none;
+}
+
+footer {
+    background: var(--primary-color);
+    width: 100%;
+    padding: 40px 35px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+footer h2 {
+    color: var(--secondary-color);
+    font-size: 30px;
+    margin: 0;
+}
+
+footer div {
+    line-height: 1.5;
+    text-align: right;
+}
+
+footer a {
+    color: var(--secondary-color)
+}
+
+section {
+    padding: 60px;
 }
