--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,8 @@ header {
     background-color: var(--tertiary-color);
     padding: 20px 5px;
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
+    justify-content: space-between;
     position: -webkit-sticky;
     position: sticky;
     top:0;
@@ -42,6 +42,9 @@ header a {
 
 header nav {
     margin: 7px 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 header nav ul li {
@@ -53,7 +56,7 @@ header nav ul li {
 header nav ul li a:hover {
     background: var(--primary-color);
     color: var(--secondary-color);
-    border-radius: 15px;
+    border-radius: 100px;
     text-shadow: none;
 }
 
@@ -118,7 +121,41 @@ section {
 }
 /* end hero section */
 
+.section-title {
+    font-size: 35px;
+    color: var(--secondary-color);
+    border-bottom: 3px dotted;
+    padding-bottom: 20px;
+    text-align: left;
+    margin: 20px 0 20px 0;
+    width: 50%;
+}
 
+.my-bio {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.my-bio img {
+    width: 500px;
+    height: 400px;
+    border-style: dotted;
+    border-color: var(--secondary-color);
+    flex-wrap: wrap;
+}
+
+.my-bio p {
+    padding: 25px;
+    overflow: auto;
+    line-height: 1.3;
+}
+
+.socialmedia img {
+    border-image: round;
+    border-style: hidden;
+    border-radius: 50%;
+}
 
 
 
