--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,14 @@ header nav {
     justify-content: space-between;
 }
 
+header nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+}
+
 header nav ul li {
     padding: 10px 15px;
     font-weight: 1.55vw;
@@ -59,7 +67,7 @@ header nav ul li a:hover {
     border-radius: 100px;
     text-shadow: none;
 }
-
+/* footer section  */
 footer {
     background: var(--secondary-color);
     width: 100%;
@@ -87,7 +95,7 @@ footer a {
 section {
     padding: 60px;
 }
-
+/* footer section end*/
 /* hero section */
 
 .hero {
@@ -130,20 +138,12 @@ section {
     margin: 20px 0 20px 0;
     width: 50%;
 }
-
-
+/* bio section*/
 .my-bio {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.my-bio img {
-    width: 500px;
-    height: 400px;
-    border-style: dotted;
-    border-color: var(--secondary-color);
-    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .my-bio p {
@@ -151,6 +151,30 @@ section {
     overflow: auto;
     line-height: 1.3;
 }
+/*my work section*/
 
+/* my work section end*/
+/* contact info start */
+.contact-info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.contact-info >* {
+    flex: 1;
+    margin: 15px;
+}
+
+.contact-info h3 {
+    color: var(--secondary-color);
+    font-size: 22px;
+}
+
+.contact-info address a {
+    text-decoration: none;
+    color: var(--primary-color);
+}
+/* contact info end */
 
 
