--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,34 +147,50 @@ section {
 }
 
 .my-bio p {
-    padding: 25px;
+    font-size: 20px;
+    padding: 10px;
     overflow: auto;
     line-height: 1.3;
+    margin: 5px auto 1px auto;
 }
 /*my work section*/
-
-/* my work section end*/
-/* contact info start */
-.contact-info {
+.projects {
+    width: 100%;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
-.contact-info >* {
-    flex: 1;
-    margin: 15px;
+.project {
+    margin: 20px;
+    background-color: var(--secondary-color);
+    
+}
+/* my work section end*/
+/* contact info start */
+.contact-info{
+    color: var(--primary-color);
+    text-align: center;
 }
 
-.contact-info h3 {
-    color: var(--secondary-color);
+.contact-info p {
     font-size: 22px;
 }
 
-.contact-info address a {
+.contact-social {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
+}
+
+.contact-social a {
     text-decoration: none;
-    color: var(--primary-color);
+    color: var(--secondary-color);
+    margin: auto 30px auto 10px;
 }
 /* contact info end */
+
 
 
