my work styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,7 @@ header nav ul {
 
 header nav ul li {
     padding: 10px 15px;
+    font-size: 18px;
     font-weight: 1.55vw;
     text-shadow: 0 0 10px rgba(0,0,0,0.5)
 }
@@ -79,7 +80,7 @@ footer {
 
 footer h2 {
     color: var(--primary-color);
-    font-size: 30px;
+    font-size: 20px;
     margin: 0;
 }
 
@@ -133,11 +134,13 @@ section {
     font-size: 35px;
     color: var(--secondary-color);
     border-bottom: 3px dotted;
+    border-right: 3px dotted;
     padding-bottom: 20px;
     text-align: left;
     margin: 20px 0 20px 0;
     width: 50%;
 }
+
 /* bio section*/
 .my-bio {
     display: flex;
@@ -162,16 +165,36 @@ section {
     justify-content: space-around;
 }
 
-.project {
-    margin: 20px;
-    background-color: var(--secondary-color);
-    
+.project, .project-h {
+    margin: 30px;
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+}
+
+.project-title {
+    font-size: 22px;
+    color: var(--tertiary-color);
+}
+
+.project-title a {
+    text-decoration: none;
+    color: var(--tertiary-color);
+}
+
+.project-h img {
+    width: 1100px;
+    overflow: auto;
+}
+.project img {
+    width: 600px;
+    height: 400px;
+    overflow: auto;
 }
 /* my work section end*/
 /* contact info start */
 .contact-info{
     color: var(--primary-color);
-    text-align: center;
+    text-align: left;
 }
 
 .contact-info p {
@@ -191,6 +214,5 @@ section {
     margin: auto 30px auto 10px;
 }
 /* contact info end */
-
 
 
