--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,10 +143,8 @@ section {
 
 /* bio section*/
 .my-bio {
-    display: flex;
+    display: grid;
     flex-wrap: wrap;
-    flex-direction: column;
-    align-items: flex-start;
 }
 
 .my-bio p {
@@ -156,6 +154,11 @@ section {
     line-height: 1.3;
     margin: 5px auto 1px auto;
 }
+
+.my-bio img {
+    width: 400px;
+}
+
 /*my work section*/
 .projects {
     width: 100%;
@@ -215,6 +218,7 @@ section {
 }
 /* contact info end */
 
+/*media query for small desktops*/
 @media screen and (max-width: 980px) {
     header {
         padding-bottom: 0;
@@ -254,4 +258,31 @@ section {
         height: 400px;
         overflow: auto;
     }
+}
+
+/*media query for tablets */
+@media screen and (max-width: 768px) {
+    header {
+        position: relative;
+    }
+
+    header h1 {
+        font-size: 80px;
+    }
+
+    section {
+        padding: 30px 15px;
+    }
+}
+
+/*media query for phones */
+@media screen and (max-width: 575px) {
+    header h1 {
+        font-size: 40px;
+    }
+    
+    .section-title {
+        width: 95%
+    }
+
 }
