--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,8 +143,9 @@ section {
 
 /* bio section*/
 .my-bio {
-    display: grid;
+    display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .my-bio p {
@@ -153,6 +154,7 @@ section {
     overflow: auto;
     line-height: 1.3;
     margin: 5px auto 1px auto;
+    justify-content: left;
 }
 
 .my-bio img {
@@ -162,7 +164,7 @@ section {
 /*my work section*/
 .projects {
     width: 100%;
-    margin: 0 auto;
+    margin: 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -185,7 +187,7 @@ section {
 }
 
 .project-h img {
-    width: 1100px;
+    width: 100%;
     overflow: auto;
 }
 .project img {
@@ -249,6 +251,17 @@ section {
         font-size: 25px;
     }
 
+    .my-bio p{
+        text-align: center;
+    }
+
+    .my-bio img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+    }
+
     .project {
         flex: 0 70%
     }
@@ -267,11 +280,15 @@ section {
     }
 
     header h1 {
-        font-size: 80px;
+        font-size: 60px;
     }
 
     section {
         padding: 30px 15px;
+    }
+
+    .hidden-ss {
+        display: none !important;
     }
 }
 
@@ -280,9 +297,30 @@ section {
     header h1 {
         font-size: 40px;
     }
+
+    .hero-title {
+        font-size: 12px;
+    }
     
     .section-title {
-        width: 95%
+        width: 70%
     }
+
+    .project {
+        flex: 0 100%;
+    }
+
+    .project-h, .project {
+        width: 100%;
+    }
+
+    .project-h img, .project img {
+        width: 100%;
+    }
+
+    .contact-info {
+        text-align: center;
+    }
+
 
 }
