--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,7 +221,7 @@ section {
 /* contact info end */
 
 /*media query for small desktops*/
-@media screen and (max-width: 980px) {
+@media screen and (max-width: 1200px) {
     header {
         padding-bottom: 0;
         justify-content: center;
@@ -263,13 +263,22 @@ section {
     }
 
     .project {
-        flex: 0 70%
+        flex: 0 70%;
     }
 
-    .project-h img{
-        width: 600px;
-        height: 400px;
-        overflow: auto;
+    .project-h {
+        width: 70%;
+        height: 40%;
+    }
+    
+    .project {
+        width: 100%;
+        height: 60%;
+    }
+    
+    .project img {
+        width: 100%;
+        height: 60%;
     }
 }
 
@@ -312,10 +321,12 @@ section {
 
     .project-h, .project {
         width: 100%;
+        height: 40%;
     }
 
     .project-h img, .project img {
         width: 100%;
+        height: 40%;
     }
 
     .contact-info {
